--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.dark {
+  background: #232323;
+  color: white;
+  height: 100%;
+  transition: all 0.5s ease-in-out;
+}
+
+.light {
+  transition: all 0.5s ease-in-out;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
